Practica GLOBAL/parser.out
Grammar:

Rule 0     S' -> total
Rule 1     total -> BEGIN typebegin
Rule 2     typebegin -> expr END
Rule 3     typebegin -> END
Rule 4     expr -> term
Rule 5     expr -> expr term
Rule 6     term -> ID LPAREN caracteristicas RPAREN
Rule 7     caracteristicas -> sentence
Rule 8     caracteristicas -> caracteristicas sentence
Rule 9     sentence -> INTERCHANGE NUMBER PTOCOMA
Rule 10    sentence -> FITNESS EQUATION PTOCOMA
Rule 11    sentence -> SELECTION typeselection PTOCOMA
Rule 12    sentence -> CROSSOVER NUMBER typecross
Rule 13    sentence -> REPLACEMENT typereplace PTOCOMA
Rule 14    sentence -> MUTATION typemutation PTOCOMA
Rule 15    sentence -> POBLATION NUMBER PTOCOMA
Rule 16    typemutation -> POLYNOMIAL NUMBER
Rule 17    typemutation -> BITFLIP NUMBER
Rule 18    typeselection -> RANKING
Rule 19    typeselection -> ROULETTE
Rule 20    typeselection -> TOURNAMENT NUMBER
Rule 21    typereplace -> RANDOM
Rule 22    typereplace -> WORST
Rule 23    typecross -> AND NUMBER PTOCOMA
Rule 24    typecross -> PTOCOMA

Terminals, with rules where they appear:

AND                  : 23
BEGIN                : 1
BITFLIP              : 17
CROSSOVER            : 12
END                  : 2 3
EQUATION             : 10
FITNESS              : 10
ID                   : 6
INTERCHANGE          : 9
LPAREN               : 6
MUTATION             : 14
NUMBER               : 9 12 15 16 17 20 23
POBLATION            : 15
POLYNOMIAL           : 16
PTOCOMA              : 9 10 11 13 14 15 23 24
RANDOM               : 21
RANKING              : 18
REPLACEMENT          : 13
ROULETTE             : 19
RPAREN               : 6
SELECTION            : 11
TOURNAMENT           : 20
WORST                : 22
error                : 

Nonterminals, with rules where they appear:

caracteristicas      : 6 8
expr                 : 2 5
sentence             : 7 8
term                 : 4 5
total                : 0
typebegin            : 1
typecross            : 12
typemutation         : 14
typereplace          : 13
typeselection        : 11


state 0

    (0) S' -> . total
    (1) total -> . BEGIN typebegin
    BEGIN           shift and go to state 2

    total                          shift and go to state 1

state 1

    (0) S' -> total .


state 2

    (1) total -> BEGIN . typebegin
    (2) typebegin -> . expr END
    (3) typebegin -> . END
    (4) expr -> . term
    (5) expr -> . expr term
    (6) term -> . ID LPAREN caracteristicas RPAREN
    END             shift and go to state 5
    ID              shift and go to state 7

    typebegin                      shift and go to state 3
    expr                           shift and go to state 4
    term                           shift and go to state 6

state 3

    (1) total -> BEGIN typebegin .
    $end            reduce using rule 1 (total -> BEGIN typebegin .)


state 4

    (2) typebegin -> expr . END
    (5) expr -> expr . term
    (6) term -> . ID LPAREN caracteristicas RPAREN
    END             shift and go to state 8
    ID              shift and go to state 7

    term                           shift and go to state 9

state 5

    (3) typebegin -> END .
    $end            reduce using rule 3 (typebegin -> END .)


state 6

    (4) expr -> term .
    END             reduce using rule 4 (expr -> term .)
    ID              reduce using rule 4 (expr -> term .)


state 7

    (6) term -> ID . LPAREN caracteristicas RPAREN
    LPAREN          shift and go to state 10


state 8

    (2) typebegin -> expr END .
    $end            reduce using rule 2 (typebegin -> expr END .)


state 9

    (5) expr -> expr term .
    END             reduce using rule 5 (expr -> expr term .)
    ID              reduce using rule 5 (expr -> expr term .)


state 10

    (6) term -> ID LPAREN . caracteristicas RPAREN
    (7) caracteristicas -> . sentence
    (8) caracteristicas -> . caracteristicas sentence
    (9) sentence -> . INTERCHANGE NUMBER PTOCOMA
    (10) sentence -> . FITNESS EQUATION PTOCOMA
    (11) sentence -> . SELECTION typeselection PTOCOMA
    (12) sentence -> . CROSSOVER NUMBER typecross
    (13) sentence -> . REPLACEMENT typereplace PTOCOMA
    (14) sentence -> . MUTATION typemutation PTOCOMA
    (15) sentence -> . POBLATION NUMBER PTOCOMA
    INTERCHANGE     shift and go to state 13
    FITNESS         shift and go to state 14
    SELECTION       shift and go to state 15
    CROSSOVER       shift and go to state 16
    REPLACEMENT     shift and go to state 17
    MUTATION        shift and go to state 18
    POBLATION       shift and go to state 19

    caracteristicas                shift and go to state 11
    sentence                       shift and go to state 12

state 11

    (6) term -> ID LPAREN caracteristicas . RPAREN
    (8) caracteristicas -> caracteristicas . sentence
    (9) sentence -> . INTERCHANGE NUMBER PTOCOMA
    (10) sentence -> . FITNESS EQUATION PTOCOMA
    (11) sentence -> . SELECTION typeselection PTOCOMA
    (12) sentence -> . CROSSOVER NUMBER typecross
    (13) sentence -> . REPLACEMENT typereplace PTOCOMA
    (14) sentence -> . MUTATION typemutation PTOCOMA
    (15) sentence -> . POBLATION NUMBER PTOCOMA
    RPAREN          shift and go to state 20
    INTERCHANGE     shift and go to state 13
    FITNESS         shift and go to state 14
    SELECTION       shift and go to state 15
    CROSSOVER       shift and go to state 16
    REPLACEMENT     shift and go to state 17
    MUTATION        shift and go to state 18
    POBLATION       shift and go to state 19

    sentence                       shift and go to state 21

state 12

    (7) caracteristicas -> sentence .
    RPAREN          reduce using rule 7 (caracteristicas -> sentence .)
    INTERCHANGE     reduce using rule 7 (caracteristicas -> sentence .)
    FITNESS         reduce using rule 7 (caracteristicas -> sentence .)
    SELECTION       reduce using rule 7 (caracteristicas -> sentence .)
    CROSSOVER       reduce using rule 7 (caracteristicas -> sentence .)
    REPLACEMENT     reduce using rule 7 (caracteristicas -> sentence .)
    MUTATION        reduce using rule 7 (caracteristicas -> sentence .)
    POBLATION       reduce using rule 7 (caracteristicas -> sentence .)


state 13

    (9) sentence -> INTERCHANGE . NUMBER PTOCOMA
    NUMBER          shift and go to state 22


state 14

    (10) sentence -> FITNESS . EQUATION PTOCOMA
    EQUATION        shift and go to state 23


state 15

    (11) sentence -> SELECTION . typeselection PTOCOMA
    (18) typeselection -> . RANKING
    (19) typeselection -> . ROULETTE
    (20) typeselection -> . TOURNAMENT NUMBER
    RANKING         shift and go to state 25
    ROULETTE        shift and go to state 26
    TOURNAMENT      shift and go to state 27

    typeselection                  shift and go to state 24

state 16

    (12) sentence -> CROSSOVER . NUMBER typecross
    NUMBER          shift and go to state 28


state 17

    (13) sentence -> REPLACEMENT . typereplace PTOCOMA
    (21) typereplace -> . RANDOM
    (22) typereplace -> . WORST
    RANDOM          shift and go to state 30
    WORST           shift and go to state 31

    typereplace                    shift and go to state 29

state 18

    (14) sentence -> MUTATION . typemutation PTOCOMA
    (16) typemutation -> . POLYNOMIAL NUMBER
    (17) typemutation -> . BITFLIP NUMBER
    POLYNOMIAL      shift and go to state 33
    BITFLIP         shift and go to state 34

    typemutation                   shift and go to state 32

state 19

    (15) sentence -> POBLATION . NUMBER PTOCOMA
    NUMBER          shift and go to state 35


state 20

    (6) term -> ID LPAREN caracteristicas RPAREN .
    END             reduce using rule 6 (term -> ID LPAREN caracteristicas RPAREN .)
    ID              reduce using rule 6 (term -> ID LPAREN caracteristicas RPAREN .)


state 21

    (8) caracteristicas -> caracteristicas sentence .
    RPAREN          reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    INTERCHANGE     reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    FITNESS         reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    SELECTION       reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    CROSSOVER       reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    REPLACEMENT     reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    MUTATION        reduce using rule 8 (caracteristicas -> caracteristicas sentence .)
    POBLATION       reduce using rule 8 (caracteristicas -> caracteristicas sentence .)


state 22

    (9) sentence -> INTERCHANGE NUMBER . PTOCOMA
    PTOCOMA         shift and go to state 36


state 23

    (10) sentence -> FITNESS EQUATION . PTOCOMA
    PTOCOMA         shift and go to state 37


state 24

    (11) sentence -> SELECTION typeselection . PTOCOMA
    PTOCOMA         shift and go to state 38


state 25

    (18) typeselection -> RANKING .
    PTOCOMA         reduce using rule 18 (typeselection -> RANKING .)


state 26

    (19) typeselection -> ROULETTE .
    PTOCOMA         reduce using rule 19 (typeselection -> ROULETTE .)


state 27

    (20) typeselection -> TOURNAMENT . NUMBER
    NUMBER          shift and go to state 39


state 28

    (12) sentence -> CROSSOVER NUMBER . typecross
    (23) typecross -> . AND NUMBER PTOCOMA
    (24) typecross -> . PTOCOMA
    AND             shift and go to state 41
    PTOCOMA         shift and go to state 42

    typecross                      shift and go to state 40

state 29

    (13) sentence -> REPLACEMENT typereplace . PTOCOMA
    PTOCOMA         shift and go to state 43


state 30

    (21) typereplace -> RANDOM .
    PTOCOMA         reduce using rule 21 (typereplace -> RANDOM .)


state 31

    (22) typereplace -> WORST .
    PTOCOMA         reduce using rule 22 (typereplace -> WORST .)


state 32

    (14) sentence -> MUTATION typemutation . PTOCOMA
    PTOCOMA         shift and go to state 44


state 33

    (16) typemutation -> POLYNOMIAL . NUMBER
    NUMBER          shift and go to state 45


state 34

    (17) typemutation -> BITFLIP . NUMBER
    NUMBER          shift and go to state 46


state 35

    (15) sentence -> POBLATION NUMBER . PTOCOMA
    PTOCOMA         shift and go to state 47


state 36

    (9) sentence -> INTERCHANGE NUMBER PTOCOMA .
    RPAREN          reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    INTERCHANGE     reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    FITNESS         reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    SELECTION       reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    CROSSOVER       reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    REPLACEMENT     reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    MUTATION        reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)
    POBLATION       reduce using rule 9 (sentence -> INTERCHANGE NUMBER PTOCOMA .)


state 37

    (10) sentence -> FITNESS EQUATION PTOCOMA .
    RPAREN          reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    INTERCHANGE     reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    FITNESS         reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    SELECTION       reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    CROSSOVER       reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    REPLACEMENT     reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    MUTATION        reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)
    POBLATION       reduce using rule 10 (sentence -> FITNESS EQUATION PTOCOMA .)


state 38

    (11) sentence -> SELECTION typeselection PTOCOMA .
    RPAREN          reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    INTERCHANGE     reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    FITNESS         reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    SELECTION       reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    CROSSOVER       reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    REPLACEMENT     reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    MUTATION        reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)
    POBLATION       reduce using rule 11 (sentence -> SELECTION typeselection PTOCOMA .)


state 39

    (20) typeselection -> TOURNAMENT NUMBER .
    PTOCOMA         reduce using rule 20 (typeselection -> TOURNAMENT NUMBER .)


state 40

    (12) sentence -> CROSSOVER NUMBER typecross .
    RPAREN          reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    INTERCHANGE     reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    FITNESS         reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    SELECTION       reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    CROSSOVER       reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    REPLACEMENT     reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    MUTATION        reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)
    POBLATION       reduce using rule 12 (sentence -> CROSSOVER NUMBER typecross .)


state 41

    (23) typecross -> AND . NUMBER PTOCOMA
    NUMBER          shift and go to state 48


state 42

    (24) typecross -> PTOCOMA .
    RPAREN          reduce using rule 24 (typecross -> PTOCOMA .)
    INTERCHANGE     reduce using rule 24 (typecross -> PTOCOMA .)
    FITNESS         reduce using rule 24 (typecross -> PTOCOMA .)
    SELECTION       reduce using rule 24 (typecross -> PTOCOMA .)
    CROSSOVER       reduce using rule 24 (typecross -> PTOCOMA .)
    REPLACEMENT     reduce using rule 24 (typecross -> PTOCOMA .)
    MUTATION        reduce using rule 24 (typecross -> PTOCOMA .)
    POBLATION       reduce using rule 24 (typecross -> PTOCOMA .)


state 43

    (13) sentence -> REPLACEMENT typereplace PTOCOMA .
    RPAREN          reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    INTERCHANGE     reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    FITNESS         reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    SELECTION       reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    CROSSOVER       reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    REPLACEMENT     reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    MUTATION        reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)
    POBLATION       reduce using rule 13 (sentence -> REPLACEMENT typereplace PTOCOMA .)


state 44

    (14) sentence -> MUTATION typemutation PTOCOMA .
    RPAREN          reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    INTERCHANGE     reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    FITNESS         reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    SELECTION       reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    CROSSOVER       reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    REPLACEMENT     reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    MUTATION        reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)
    POBLATION       reduce using rule 14 (sentence -> MUTATION typemutation PTOCOMA .)


state 45

    (16) typemutation -> POLYNOMIAL NUMBER .
    PTOCOMA         reduce using rule 16 (typemutation -> POLYNOMIAL NUMBER .)


state 46

    (17) typemutation -> BITFLIP NUMBER .
    PTOCOMA         reduce using rule 17 (typemutation -> BITFLIP NUMBER .)


state 47

    (15) sentence -> POBLATION NUMBER PTOCOMA .
    RPAREN          reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    INTERCHANGE     reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    FITNESS         reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    SELECTION       reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    CROSSOVER       reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    REPLACEMENT     reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    MUTATION        reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)
    POBLATION       reduce using rule 15 (sentence -> POBLATION NUMBER PTOCOMA .)


state 48

    (23) typecross -> AND NUMBER . PTOCOMA
    PTOCOMA         shift and go to state 49


state 49

    (23) typecross -> AND NUMBER PTOCOMA .
    RPAREN          reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    INTERCHANGE     reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    FITNESS         reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    SELECTION       reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    CROSSOVER       reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    REPLACEMENT     reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    MUTATION        reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
    POBLATION       reduce using rule 23 (typecross -> AND NUMBER PTOCOMA .)
